Fix bug where lock icon could be added multiple times - if the game timed out, it would then display off centre.

--- a/Chess/Content/Site.css
+++ b/Chess/Content/Site.css
@@ -48,13 +48,14 @@ a:link {
     color: #8f514f;
 }
 
-#lockIcon {
+div.lockIcon {
     position:absolute;
-    height:127px;
-    width:127px;
+    height:128px;
+    width:128px;
     background-repeat: no-repeat;
     background: url("/Images/lock.png");
     z-index: 1;
+    opacity: 0.7;
     display: inline-block;
 }
 
